# chessagon

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/core/: Cargo.toml  README.md
crates/core/src/: board.rs  color.rs  coordinate.rs  lib.rs  mov.rs  sides.rs
crates/core/src/coordinate/: tests.rs
crates/core/src/diagrams/: initial_board.txt  min_valid_rank_coordinates.txt  mod.rs  movement_bishop.txt  movement_knight.txt  ranks.txt
crates/core/src/game/: action.rs  mod.rs  tests.rs  time_control.rs  view.rs
crates/core/src/piece/: bishop.rs  king.rs  knight.rs  mod.rs  movement.rs  pawn.rs  queen.rs  rook.rs
crates/engine/: Cargo.toml  README.md
crates/engine/examples/: anthony.rs
crates/engine/src/: board.rs  lib.rs  matcher.rs  options.rs
crates/engine/src/diagrams/: files.txt  indices.txt  mod.rs  rank_widths.txt
crates/engine/src/models/: anthony.rs  mod.rs
crates/engine/src/piece/: bishop.rs  mod.rs  rook.rs
crates/ui/: Cargo.toml  index.html
crates/ui/assets/: sw.js
crates/ui/src/: app.rs  color_scheme.rs  game.rs  lib.rs  main.rs  main_menu.rs
crates/ui/src/board/: board.wgsl  mod.rs  piece.rs  wgpu.rs
crates/ui/src/components/: mod.rs
crates/ui/src/game/: timer.rs
