[workspace]
members = ["crates/core", "crates/engine"]

[workspace.dependencies]
nalgebra = "0.33.2"
thiserror = "2.0.8"
strum = { version = "0.26.3", features = ["derive"] }
hext-boards = "0.5.0"
pretty_assertions = "1.4.1"
jiff = "0.1.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package]
name = "chessagon"
version = "0.1.0"
edition = "2024"

[dependencies]
chessagon-core = { path = "crates/core" }

