[package]
name = "chessagon-ui"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
bytemuck = { workspace = true, features = ["min_const_generics"] }
chessagon-core = { path = "../core", features = ["serde"] }
chessagon-engine = { path = "../engine" }

egui = { version = "0.31" }
egui_extras = { version = "0.31" , features = ["svg"]}
eframe = { version = "0.31", default-features = false, features = [
    "accesskit", 
    "default_fonts",
    "wgpu",
    "persistence", 
    "wayland",   
] }
serde = { version = "1", features = ["derive"] }
bitflags = { version = "2.8.0", features = ["bytemuck"] }
egui-notify = "0.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
